# Matrix_Chain_Multiplication-

./: .gitignore  README.md  bench_naive.py  benchmark.py  benchmark_results.txt  pyproject.toml  render.yaml  web_app.py
report/: report.tex  video_script.md
src/mcm/: __init__.py  __main__.py  cli.py  formatter.py  solver.py  validator.py
src/mcm2/: __init__.py  __main__.py  cli.py  core.py  display.py  validation.py
static/: app.js  style.css
templates/: index.html
testcases/: README.md  cases.json  run_testcases.py  testcases.md  testcases.txt
tests/: test_cli.py  test_core.py  test_display.py  test_formatter.py  test_solver.py  test_validation.py  test_validator.py
web/: app.py
web/static/: style.css
web/templates/: index.html
