[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcm"
version = "1.0.0"
description = "Matrix Chain Multiplication - quy hoạch động trên đoạn, ba lời giải đối chiếu."
requires-python = ">=3.10"
# Phần lõi chỉ dùng thư viện chuẩn. Web demo cần Flask (tùy chọn).
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
web = ["flask>=3.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
